deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  namespace: risecloud
  labels:
    app: landing-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
        - name: landing-page
          image: ghcr.io/riseaicloud/landing-page:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "16Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
