deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page
  namespace: risecloud
spec:
  selector:
    app: landing-page
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
