deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page
  namespace: risecloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cloud.tkeel.io
      secretName: landing-page-tls
  rules:
    - host: cloud.tkeel.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing-page
                port:
                  number: 80
